--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="CryptoOtters Line of avatars for an upcoming P2E game where users can grind, socialize, and more!" />
-  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
   <!-- CSS Files  -->
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/Header.css">
